BackEdgeThreshold option is no longer used and should be removed

XMLWordPrintable

    • b15

      The -XX BackEdgeThreshold option is no longer used by any of the source, so it should be removed. Users now need to use OnStackReplacePercentage instead. Keeping it around misleads users who may think it does something, and are not aware of the need to use OnStackReplacePercentage instead.

            Assignee:
            Tobias Hartmann
            Reporter:
            Chris Plummer
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: