8021770: BackEdgeThreshold option is no longer used and should be removed

The BackEdgeThreshold option is removed because it is no longer used.

Reviewed-by: twisti, kvn, cjplummer